tests/algorithms/x/C/maths/fibonacci.c
// Generated by Mochi 0.10.32 on 2025-08-11 22:22 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>
#include <math.h>

size_t fib_iterative_len;
size_t fib_recursive_len;
size_t fib_recursive_cached_len;
size_t fib_memoization_len;
size_t fib_binet_len;
size_t matrix_mul_len;
size_t *matrix_mul_lens;
size_t matrix_pow_len;
size_t *matrix_pow_lens;

static int contains_map_int(const int keys[], size_t len, int key) {
    for (size_t i = 0; i < len; i++) {
        if (keys[i] == key) return 1;
    }
    return 0;
}

static char* str_int(long long v) {
    char buf[32];
    snprintf(buf, sizeof(buf), "%lld", v);
    return strdup(buf);
}

static int map_get_ii(const int keys[], const int vals[], size_t len, int key) {
    for (size_t i = 0; i < len; i++) {
        if (keys[i] == key) return vals[i];
    }
    return 0;
}

static void map_set_ii(int keys[], int vals[], size_t *len, int key, int val) {
    for (size_t i = 0; i < *len; i++) {
        if (keys[i] == key) { vals[i] = val; return; }
    }
    keys[*len] = key; vals[*len] = val; (*len)++;
}

static long long* list_append_int(long long *arr, size_t *len, long long val) {
    arr = realloc(arr, (*len + 1) * sizeof(long long));
    arr[*len] = val;
    (*len)++;
    return arr;
}

#include <time.h>
#include <stdlib.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

static long long* list_append_long_long(long long *arr, size_t *len, long long val) {
    arr = realloc(arr, (*len + 1) * sizeof(long long));
    arr[*len] = val;
    (*len)++;
    return arr;
}

static int fib_memo_cache_keys[19] = {0LL, 1LL, 2LL};
int fib_memo_cache_vals[19] = {0LL, 1LL, 1LL};
size_t fib_memo_cache_len = 3;

double sqrt(double x);
double user_powf(double x, long long n);
long long user_roundf(double x);
long long * fib_iterative(long long n);
long long fib_recursive_term(long long i);
long long * fib_recursive(long long n);
long long fib_recursive_cached_term(long long i);
long long * fib_recursive_cached(long long n);
long long fib_memoization_term(long long num);
long long * fib_memoization(long long n);
long long * fib_binet(long long n);
long long * * matrix_mul(long long * * a, size_t a_len, size_t* a_lens, size_t a_lens_len, long long * * b, size_t b_len, size_t* b_lens, size_t b_lens_len);
long long * * matrix_pow(long long * * m, size_t m_len, size_t* m_lens, size_t m_lens_len, long long power);
long long fib_matrix(long long n);
long long run_tests();
int main(void);

double sqrt(double x) {
    if (x <= 0.0) {
        return 0.0;
    }
    double guess = x;
    long long i = 0LL;
    while (i < 10LL) {
        guess = (guess + (x / guess)) / 2.0;
        i = i + 1LL;
    }
    return guess;
}

double user_powf(double x, long long n) {
    double res = 1.0;
    long long i = 0LL;
    while (i < n) {
        res = res * x;
        i = i + 1LL;
    }
    return res;
}

long long user_roundf(double x) {
    if (x >= 0.0) {
        return x + 0.5;
    }
    return x - 0.5;
}

long long * fib_iterative(long long n) {
    if (n < 0LL) {
        panic("n is negative");
    }
    if (n == 0LL) {
        {
            long long* __tmp0_data = malloc(1 * sizeof(long long));
            __tmp0_data[0] = 0LL;
            fib_iterative_len = 1;
            return __tmp0_data;
        }
    }
    long long *fib = NULL;
    size_t fib_len = 0;
    fib = list_append_long_long(fib, &fib_len, 0LL);
    fib = list_append_long_long(fib, &fib_len, 1LL);
    long long i = 2LL;
    while (i <= n) {
        fib = list_append_int(fib, &fib_len, fib[(int)({long long _mochi_idx = i - 1LL; _mochi_idx < 0 ? fib_len + _mochi_idx : _mochi_idx;})] + fib[(int)({long long _mochi_idx = i - 2LL; _mochi_idx < 0 ? fib_len + _mochi_idx : _mochi_idx;})]);
        i = i + 1LL;
    }
    return fib_iterative_len = fib_len, fib;
}

long long fib_recursive_term(long long i) {
    if (i < 0LL) {
        panic("n is negative");
    }
    if (i < 2LL) {
        return i;
    }
    return fib_recursive_term(i - 1LL) + fib_recursive_term(i - 2LL);
}

long long * fib_recursive(long long n) {
    if (n < 0LL) {
        panic("n is negative");
    }
    long long *res = NULL;
    size_t res_len = 0;
    long long i = 0LL;
    while (i <= n) {
        res = list_append_long_long(res, &res_len, fib_recursive_term(i));
        i = i + 1LL;
    }
    return fib_recursive_len = res_len, res;
}

long long fib_recursive_cached_term(long long i) {
    if (i < 0LL) {
        panic("n is negative");
    }
    if (i < 2LL) {
        return i;
    }
    if (contains_map_int(fib_cache_global_keys, fib_cache_global_len, i)) {
        return map_get_ii(fib_cache_global_keys, fib_cache_global_vals, fib_cache_global_len, i);
    }
    long long val = fib_recursive_cached_term(i - 1LL) + fib_recursive_cached_term(i - 2LL);
    map_set_ii(fib_cache_global_keys, fib_cache_global_vals, &fib_cache_global_len, i, val);
    return val;
}

long long * fib_recursive_cached(long long n) {
    if (n < 0LL) {
        panic("n is negative");
    }
    long long *res = NULL;
    size_t res_len = 0;
    long long j = 0LL;
    while (j <= n) {
        res = list_append_long_long(res, &res_len, fib_recursive_cached_term(j));
        j = j + 1LL;
    }
    return fib_recursive_cached_len = res_len, res;
}

long long fib_memoization_term(long long num) {
    if (contains_map_int(fib_memo_cache_keys, fib_memo_cache_len, num)) {
        return map_get_ii(fib_memo_cache_keys, fib_memo_cache_vals, fib_memo_cache_len, num);
    }
    long long value = fib_memoization_term(num - 1LL) + fib_memoization_term(num - 2LL);
    map_set_ii(fib_memo_cache_keys, fib_memo_cache_vals, &fib_memo_cache_len, num, value);
    return value;
}

long long * fib_memoization(long long n) {
    if (n < 0LL) {
        panic("n is negative");
    }
    long long *out = NULL;
    size_t out_len = 0;
    long long i = 0LL;
    while (i <= n) {
        out = list_append_long_long(out, &out_len, fib_memoization_term(i));
        i = i + 1LL;
    }
    return fib_memoization_len = out_len, out;
}

long long * fib_binet(long long n) {
    if (n < 0LL) {
        panic("n is negative");
    }
    if (n >= 1475LL) {
        panic("n is too large");
    }
    double sqrt5 = sqrt(5.0);
    double phi = (1.0 + sqrt5) / 2.0;
    long long *res = NULL;
    size_t res_len = 0;
    long long i = 0LL;
    while (i <= n) {
        long long val = user_roundf(user_powf(phi, i) / sqrt5);
        res = list_append_long_long(res, &res_len, val);
        i = i + 1LL;
    }
    return fib_binet_len = res_len, res;
}

long long * * matrix_mul(long long * * a, size_t a_len, size_t* a_lens, size_t a_lens_len, long long * * b, size_t b_len, size_t* b_lens, size_t b_lens_len) {
    long long a00 = (a[(int)({long long _mochi_idx = 0LL; _mochi_idx < 0 ? a_len + _mochi_idx : _mochi_idx;})][(int)({long long _mochi_idx = 0LL; _mochi_idx < 0 ? a_lens[0LL] + _mochi_idx : _mochi_idx;})] * b[(int)({long long _mochi_idx = 0LL; _mochi_idx < 0 ? b_len + _mochi_idx : _mochi_idx;})][(int)({long long _mochi_idx = 0LL; _mochi_idx < 0 ? b_lens[0LL] + _mochi_idx : _mochi_idx;})]) + (a[(int)({long long _mochi_idx = 0LL; _mochi_idx < 0 ? a_len + _mochi_idx : _mochi_idx;})][(int)({long long _mochi_idx = 1LL; _mochi_idx < 0 ? a_lens[0LL] + _mochi_idx : _mochi_idx;})] * b[(int)({long long _mochi_idx = 1LL; _mochi_idx < 0 ? b_len + _mochi_idx : _mochi_idx;})][(int)({long long _mochi_idx = 0LL; _mochi_idx < 0 ? b_lens[1LL] + _mochi_idx : _mochi_idx;})]);
    long long a01 = (a[(int)({long long _mochi_idx = 0LL; _mochi_idx < 0 ? a_len + _mochi_idx : _mochi_idx;})][(int)({long long _mochi_idx = 0LL; _mochi_idx < 0 ? a_lens[0LL] + _mochi_idx : _mochi_idx;})] * b[(int)({long long _mochi_idx = 0LL; _mochi_idx < 0 ? b_len + _mochi_idx : _mochi_idx;})][(int)({long long _mochi_idx = 1LL; _mochi_idx < 0 ? b_lens[0LL] + _mochi_idx : _mochi_idx;})]) + (a[(int)({long long _mochi_idx = 0LL; _mochi_idx < 0 ? a_len + _mochi_idx : _mochi_idx;})][(int)({long long _mochi_idx = 1LL; _mochi_idx < 0 ? a_lens[0LL] + _mochi_idx : _mochi_idx;})] * b[(int)({long long _mochi_idx = 1LL; _mochi_idx < 0 ? b_len + _mochi_idx : _mochi_idx;})][(int)({long long _mochi_idx = 1LL; _mochi_idx < 0 ? b_lens[1LL] + _mochi_idx : _mochi_idx;})]);
    long long a10 = (a[(int)({long long _mochi_idx = 1LL; _mochi_idx < 0 ? a_len + _mochi_idx : _mochi_idx;})][(int)({long long _mochi_idx = 0LL; _mochi_idx < 0 ? a_lens[1LL] + _mochi_idx : _mochi_idx;})] * b[(int)({long long _mochi_idx = 0LL; _mochi_idx < 0 ? b_len + _mochi_idx : _mochi_idx;})][(int)({long long _mochi_idx = 0LL; _mochi_idx < 0 ? b_lens[0LL] + _mochi_idx : _mochi_idx;})]) + (a[(int)({long long _mochi_idx = 1LL; _mochi_idx < 0 ? a_len + _mochi_idx : _mochi_idx;})][(int)({long long _mochi_idx = 1LL; _mochi_idx < 0 ? a_lens[1LL] + _mochi_idx : _mochi_idx;})] * b[(int)({long long _mochi_idx = 1LL; _mochi_idx < 0 ? b_len + _mochi_idx : _mochi_idx;})][(int)({long long _mochi_idx = 0LL; _mochi_idx < 0 ? b_lens[1LL] + _mochi_idx : _mochi_idx;})]);
    long long a11 = (a[(int)({long long _mochi_idx = 1LL; _mochi_idx < 0 ? a_len + _mochi_idx : _mochi_idx;})][(int)({long long _mochi_idx = 0LL; _mochi_idx < 0 ? a_lens[1LL] + _mochi_idx : _mochi_idx;})] * b[(int)({long long _mochi_idx = 0LL; _mochi_idx < 0 ? b_len + _mochi_idx : _mochi_idx;})][(int)({long long _mochi_idx = 1LL; _mochi_idx < 0 ? b_lens[0LL] + _mochi_idx : _mochi_idx;})]) + (a[(int)({long long _mochi_idx = 1LL; _mochi_idx < 0 ? a_len + _mochi_idx : _mochi_idx;})][(int)({long long _mochi_idx = 1LL; _mochi_idx < 0 ? a_lens[1LL] + _mochi_idx : _mochi_idx;})] * b[(int)({long long _mochi_idx = 1LL; _mochi_idx < 0 ? b_len + _mochi_idx : _mochi_idx;})][(int)({long long _mochi_idx = 1LL; _mochi_idx < 0 ? b_lens[1LL] + _mochi_idx : _mochi_idx;})]);
    {
        size_t *__tmp1_lens = malloc(2 * sizeof(size_t));
        __tmp1_lens[0] = 2;
        __tmp1_lens[1] = 2;
        long long** __tmp1_data = malloc(2 * sizeof(long long*));
        __tmp1_data[0] = ({int *tmp = malloc(2 * sizeof(int)); tmp[0] = a00; tmp[1] = a01; tmp;});
        __tmp1_data[1] = ({int *tmp = malloc(2 * sizeof(int)); tmp[0] = a10; tmp[1] = a11; tmp;});
        matrix_mul_lens = __tmp1_lens;
        matrix_mul_len = 2;
        return __tmp1_data;
    }
}

long long * * matrix_pow(long long * * m, size_t m_len, size_t* m_lens, size_t m_lens_len, long long power) {
    if (power < 0LL) {
        panic("power is negative");
    }
    long long result_0[2] = {1LL, 0LL};
    long long result_1[2] = {0LL, 1LL};
    long long *result_init[2] = {result_0, result_1};
    long long **result = result_init;
    size_t result_len = 2;
    size_t result_lens_init[2] = {2, 2};
    size_t *result_lens = result_lens_init;
    size_t result_lens_len = 2;
    long long **base = m;
    size_t base_len = m_len;
    size_t *base_lens = m_lens;
    size_t base_lens_len = m_len;
    long long p = power;
    while (p > 0LL) {
        if ((p % 2LL) == 1LL) {
            result = matrix_mul(result, result_len, result_lens, result_len, base, base_len, base_lens, base_len);
            result_len = matrix_mul_len;
            result_lens = matrix_mul_lens;
        }
        base = matrix_mul(base, base_len, base_lens, base_len, base, base_len, base_lens, base_len);
        base_len = matrix_mul_len;
        base_lens = matrix_mul_lens;
        p = p / 2LL;
    }
    return matrix_pow_lens = result_lens, matrix_pow_len = result_len, result;
}

long long fib_matrix(long long n) {
    if (n < 0LL) {
        panic("n is negative");
    }
    if (n == 0LL) {
        return 0LL;
    }
    long long m_0[2] = {1LL, 1LL};
    long long m_1[2] = {1LL, 0LL};
    long long *m_init[2] = {m_0, m_1};
    long long **m = m_init;
    size_t m_len = 2;
    size_t m_lens_init[2] = {2, 2};
    size_t *m_lens = m_lens_init;
    size_t m_lens_len = 2;
    long long **res = matrix_pow(m, m_len, m_lens, m_len, n - 1LL);
    size_t res_len = matrix_pow_len;
    size_t *res_lens = matrix_pow_lens;
    size_t res_lens_len = matrix_pow_len;
    return res[(int)({long long _mochi_idx = 0LL; _mochi_idx < 0 ? res_len + _mochi_idx : _mochi_idx;})][(int)({long long _mochi_idx = 0LL; _mochi_idx < 0 ? res_lens[0LL] + _mochi_idx : _mochi_idx;})];
}

long long run_tests() {
    long long *expected = NULL;
    size_t expected_len = 0;
    expected = list_append_long_long(expected, &expected_len, 0LL);
    expected = list_append_long_long(expected, &expected_len, 1LL);
    expected = list_append_long_long(expected, &expected_len, 1LL);
    expected = list_append_long_long(expected, &expected_len, 2LL);
    expected = list_append_long_long(expected, &expected_len, 3LL);
    expected = list_append_long_long(expected, &expected_len, 5LL);
    expected = list_append_long_long(expected, &expected_len, 8LL);
    expected = list_append_long_long(expected, &expected_len, 13LL);
    expected = list_append_long_long(expected, &expected_len, 21LL);
    expected = list_append_long_long(expected, &expected_len, 34LL);
    expected = list_append_long_long(expected, &expected_len, 55LL);
    long long *it = fib_iterative(10LL);
    size_t it_len = fib_iterative_len;
    long long *rec = fib_recursive(10LL);
    size_t rec_len = fib_recursive_len;
    long long *cache = fib_recursive_cached(10LL);
    size_t cache_len = fib_recursive_cached_len;
    long long *memo = fib_memoization(10LL);
    size_t memo_len = fib_memoization_len;
    long long *bin = fib_binet(10LL);
    size_t bin_len = fib_binet_len;
    long long m = fib_matrix(10LL);
    if (it != expected) {
        panic("iterative failed");
    }
    if (rec != expected) {
        panic("recursive failed");
    }
    if (cache != expected) {
        panic("cached failed");
    }
    if (memo != expected) {
        panic("memoization failed");
    }
    if (bin != expected) {
        panic("binet failed");
    }
    if (m != 55LL) {
        panic("matrix failed");
    }
    return m;
}

int main(void) {
    {
        long long __start = _now();
        static int fib_cache_global_keys[16] = {};
        int fib_cache_global_vals[16] = {};
        size_t fib_cache_global_len = 0;
        puts(str_int(run_tests()));
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
